# curl-rust

./: .gitignore  Cargo.toml  README.md  build.rs  devenv.nix
.cargo/: config.toml
curl-sys/: Cargo.toml  build.rs  certs.rs  lib.rs
src/: certs.rs  lib.rs
src/easy/: handle.rs  handler.rs  windows.rs
tests/: basic.rs  openssl.rs  post.rs  protocols.rs  ssl_backend.rs
