[package]
name = "curl"
version = "0.4.47"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT"
repository = "https://github.com/alexcrichton/curl-rust"
homepage = "https://github.com/alexcrichton/curl-rust"
documentation = "https://docs.rs/curl"
description = "Rust bindings to libcurl for making HTTP requests"
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"
autotests = true
edition = "2018"

[dependencies]
libc = "0.2.42"
curl-sys = { path = "curl-sys", version = "0.4.77" }
socket2 = "0.5.0"
# NOTE: We use OpenSSL for all platforms and compile + statically link to a copy of OpenSSL from `openssl-src`.
#       Since we already depend on the `openssl-sys/vendored` in `curl-sys`,
#       there's no need to pull compiled dependency just for `openssl_sys::init();` call in `lib.rs`,
#       we can just reuse the same dependency used by `curl-sys`.
openssl-sys = { version = "0.9.64", features = ["vendored"] }
openssl-probe = "0.1.2"

# NOTE: Removed `schannel` and `windows-sys` dependency as we're using OpenSSL on windows as well.

[dev-dependencies]
mio = "0.6"
mio-extras = "2.0.3"
anyhow = "1.0.31"

[workspace]
members = ["systest"]

[features]
http2 = ["curl-sys/http2"]
spnego = ["curl-sys/spnego"]
protocol-ftp = ["curl-sys/protocol-ftp"]
zlib-ng-compat = ["curl-sys/zlib-ng-compat"]
upkeep_7_62_0 = ["curl-sys/upkeep_7_62_0"]
poll_7_68_0 = ["curl-sys/poll_7_68_0"]
ntlm = ["curl-sys/ntlm"]

[[test]]
name = "atexit"
harness = false

[[example]]
name = "https"
path = "examples/https.rs"

[[example]]
name = "ssl_proxy"
path = "examples/ssl_proxy.rs"

[[example]]
name = "ssl_cert_blob"
path = "examples/ssl_cert_blob.rs"

[[example]]
name = "ssl_client_auth"
path = "examples/ssl_client_auth.rs"

[[example]]
name = "aws_sigv4"
path = "examples/aws_sigv4.rs"

[[example]]
name = "multi-dl"
path = "examples/multi-dl.rs"
