[package]
name = "curl-sys"
version = "0.4.77+curl-8.10.1"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
links = "curl"
build = "build.rs"
license = "MIT"
repository = "https://github.com/alexcrichton/curl-rust"
description = "Native bindings to the libcurl library"
documentation = "https://docs.rs/curl-sys"
categories = ["external-ffi-bindings"]
edition = "2018"
exclude = ["curl/docs/", "curl/tests/"]

[lib]
name = "curl_sys"
path = "lib.rs"

[dependencies]
libz-sys = { version = "1.0.18", default-features = false, features = ["libc"] }
libc = "0.2.2"
libnghttp2-sys = { optional = true, version = "0.1.3" }
openssl-sys = { version = "0.9.64", features = ["vendored"] }

[build-dependencies]
pkg-config = "0.3.3"
cc = "1.0"

[features]
http2 = []
protocol-ftp = []
ntlm = []
poll_7_68_0 = []
spnego = []
upkeep_7_62_0 = []
zlib-ng-compat = ["libz-sys/zlib-ng"]
